# drift-notes-api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  seed_database.sh  setup-capstone-poetry.sh
driftnotesapi/: apps.py
driftnotesapi/fixtures/: category.json  day.json  event.json  events.json  token.json  trip.json  trips.json  user.json  users.json  usertrip.json  usertrips.json
driftnotesapi/models/: __init__.py  category.py  day.py  event.py  trip.py  usertrip.py
driftnotesapi/views/: __init__.py  category.py  day.py  event.py  register.py  trip.py  user.py  usertrip.py
driftnotesproject/: asgi.py  settings.py  urls.py  wsgi.py
