[tool.poetry]
name = "driftnotesproject"
version = "0.1.0"
description = ""
authors = ["Jean Patimeteeporn <jpatimet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
pylint-django = "^2.5.5"
autopep8 = "^2.1.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
